--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "for9atask",
+  "name": "authapi",
   "version": "1.0.0",
-  "description": "mimi Task",
-  "main": "index.js",
+  "description": "Auth API Node.js JWT by Dev Ed",
+  "main": "run.js",
   "scripts": {
-    "test": "Uplode Photos"
+    "test": "echo \"no test is configured\"",
+    "start": "nodemon run.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wael93/For9aTask.git"
+    "url": "github.com/LiegeoisJules/authAPI"
   },
   "keywords": [
-    "wael"
+    "auth",
+    "api",
+    "nodejs",
+    "node",
+    "js",
+    "jwt",
+    "tuto",
+    "dev_ed"
   ],
-  "author": "wael",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wael93/For9aTask/issues"
-  },
-  "homepage": "https://github.com/wael93/For9aTask#readme",
+  "author": "Dev Ed",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "@hapi/joi": "^15.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.13"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
