--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Auth API Node.js JWT by Dev Ed",
   "main": "run.js",
   "scripts": {
-    "test": "echo \"no test is configured\"",
-    "start": "nodemon run.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -25,14 +27,44 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "@types/nodemailer": "^6.1.1",
+    "add": "^2.0.6",
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "http-proxy": "^1.17.0",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.13"
+    "jwt-decode": "^2.2.0",
+    "mongoose": "^5.6.13",
+    "nodemailer": "^4.7.0",
+    "path": "^0.12.7",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "express-pino-logger": "^4.0.0",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^1.19.0",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.4.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
